<resources>
    <string name="app_name">Joint Account</string>
    <string name="tuto01_01">Welcome to Joint Account!</string>
    <string name="tuto01_02">Please define name and icons for the two persons managing your account: </string>
    <string name="tuto02">Incomes tab lists shared and personal incomes.</string>
    <string name="tuto03">Expenses tab lists expenses.</string>
    <string name="tuto04_01">Results tab calculate the input of each person according to his income.</string>
    <string name="tuto04_02">Use the slider to manually define the input.</string>
    <string name="contactUs">Contact us</string>
    <string name="opinion">Evaluate the application</string>
    <string name="informations">Information</string>
    <string name="recettes">Incomes</string>
    <string name="recette">Income</string>
    <string name="depenses">Expenses</string>
    <string name="depense">Expense</string>
    <string name="resultats">Results</string>
    <string name="commun">Shared</string>
    <string name="P1">Person 1</string>
    <string name="sommeRecettes">Sum of incomes</string>
    <string name="nomRecette">Name of income</string>
    <string name="valeurRecette">Value of income</string>
    <string name="sommeDepenses">Sum of expenses</string>
    <string name="nomDepense">Name of expense</string>
    <string name="valeurDepense">Value of expense </string>
    <string name="totalRecettes">Sum of incomes</string>
    <string name="totalDepenses">Sum of expenses</string>
    <string name="totalApports">Sum of inputs</string>
    <string name="apport">Input</string>
    <string name="reste">Rest</string>
    <string name="manque">Miss:</string>
    <string name="epargne">Excess:</string>
    <string name="merci">Thank you for downloading Joint Account!</string>
    <string name="version">version 1.03</string>
    <string name="copyright">All rights reserved @Vincent Rifà</string>
    <string name="enregistrer">Save</string>
    <string name="annuler">Cancel</string>
    <string name="profils">Persons</string>
    <string name="profil1">Person 1</string>
    <string name="profil2">Person 2</string>
    <string name="icone">Icon: </string>
    <string name="nom">Name: </string>
    <string name="sauvegarder">Save</string>
    <string name="supprimé"> suppressed!</string>
    <string name="ajoutRecette">Add an income…</string>
    <string name="ajoutDepense">Add an expense…</string>
    <string name="aide">Help</string>
</resources>
