<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_infos"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="30dp"
        android:textSize="20sp"
        android:textColor="@color/noir"
        android:textStyle="bold"
        android:text="@string/merci" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/contact"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:text="@string/contactUs" />

        <ImageButton
            android:id="@+id/button_contact"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:src="@drawable/letter32"
            android:background="@color/transparent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/evaluation"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:text="@string/opinion"/>

        <ImageButton
            android:id="@+id/button_evaluation"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:src="@drawable/star32"
            android:background="@color/transparent"/>

    </LinearLayout>


    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/version"
        android:textAlignment="textEnd"
        android:textColor="#000"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/copyright"
        android:textAlignment="textEnd"
        android:textColor="#000"
        android:textSize="10sp" />

</LinearLayout>