<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="30dp"
        android:textSize="20sp"
        android:textColor="@color/blanc"
        android:textStyle="bold"
        android:text="@string/tuto01_01" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textSize="20sp"
        android:textColor="@color/blanc"
        android:textStyle="bold"
        android:text="@string/tuto01_02" />

    <android.support.v7.widget.CardView
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="4dp"
        android:layout_marginVertical="2dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="12dp">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:textSize="18sp"
                    android:textColor="@color/noir"
                    android:layout_gravity="center_vertical"
                    android:text="@string/icone"/>

                <ImageButton
                    android:id="@+id/imageP1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/lunettes30x30"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="4dp">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:textSize="18sp"
                    android:textColor="@color/noir"
                    android:layout_gravity="center_vertical"
                    android:text="@string/nom"/>

                <EditText
                    android:id="@+id/nomP1"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:textSize="18sp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:hint="@string/profil1" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="12dp">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:textSize="18sp"
                    android:textColor="@color/noir"
                    android:layout_gravity="center_vertical"
                    android:text="@string/icone"/>

                <ImageButton
                    android:id="@+id/imageP2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/lunettes30x30"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="4dp">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:textSize="18sp"
                    android:textColor="@color/noir"
                    android:layout_gravity="center_vertical"
                    android:text="@string/nom"/>

                <EditText
                    android:id="@+id/nomP2"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:textSize="18sp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:hint="@string/profil2" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical" >

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/next01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            app:fabSize="normal"
            android:src="@drawable/round_arrow_forward_white_18dp"
            android:layout_margin="16dp" />

    </LinearLayout>

</LinearLayout>